# USPolis-Admin-Backend

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  main.py  pendencies.md  pyproject.toml  requirements.txt  scrapper.py  statistics.sh  wsgi.py
.github/workflows/: ci_cd.yml  deploy.yml
canvas/: canvas.ipynb
database/: mongo.py
database/models/: building.py  classroom.py  occurence.py  reservation.py  schedule.py  subject.py  university_class.py  user.py  user_building.py
migrations/: env.py
migrations/versions/: 05154ca469fb_merge_auth_feature_and_forum_features.py  0665bcbe2878_update_exam_model_and_solicitation_refactoring.py  0b135827e5d6_add_reservation_type_as_enum.py  0e8f9c2c9591_added_cascade_backref_false_on_schedule.py  12f1cc7e68b4_update_reservation_and_solicitation_.py  13e28d818266_teste_crawl.py  170b1b4806d4_deploy_group_feature.py  17397e462799_rename_group_boolean_flag.py  17c43c8b9acf_removed_cascade_from_classroom_and_subj.py  1c0017953ad7_create_occurrence_label.py  1c0017953ad7_create_occurrence_label_and_migrate_solicitation_status_to_reservation.py  1f553e0f46f9_remove_cascade_between_class_n_sched.py  1fbd399024e2_create_group_models.py  24c87e94bf2a_move_projector_to_audivisualenum.py  25815c8def9f_add_reservable_and_remote_on_.py  2a4d06849f24_merge_with_forum.py  37db30674f86_create_user_session_feature.py  3a1eb5622840_deploy.py  3c251cc63118_add_holiday_constraint.py  3d448d62c8e9_update_date_fields.py  3fb2a7fba8b5_first_commit.py  42b0236b0310_creation_of_comments_and_mobile_user_.py  45a0a4c60bef_forum_post_reply.py  4773a5364d80_remove_group_abbreviation.py  49bd2f582a5a_forum_post_filter_tags.py  4ab489110583_.py  4abbc03d3542_local.py  4abbc03d3542_remove_cognito_id.py  4beb4f0ff6d7_update_subject_and_class_models.py  4c483339ad7b_add_unique_constraint_for_group.py  4f74618478b5_remove_main_column_on_groups.py  4ffffa437549_merge_edit_course_structure_and user-session_migrations.py  523faed7a43e_remove_wrong_nullable_columns.py  54e3d0a077de_add_closed_by_in_solicitation.py  557af0c2f159_create_intentional_conflicts_contraints.py  57a9e9d23571_local.py  57a9e9d23571_remove_username_column.py  58b58cda3fb5_remove_skip_exceptions_on_schedule.py  595713fbd2d1_.py  5be61781ecc0_classroom_permission_feature.py  (+60 more)
migrations/versions-new/: 21f1e6abbff1_deploy_janus_crawler.py  297c3bc7bfb0_deploy_merge_with_forum.py  49bd2f582a5a_forum_post_filter_tags.py  4beb4f0ff6d7_update_subject_and_class_models.py  5fc1e85f84a3_add_forum_post_reply_and_report.py  64a70f848243_forum_global.py  7af3b512d761_deploy_allocation_log_branch_and_.py  9a116629041b_allocation_log_feature.py  cf3211559b61_add_holiday_name_and_relations.py  d41e4f7ca46f_update_subject_type_and_user_model.py
queries/: example_test.py
server/: __init__.py  app.py  cache.py  config.py  db.py  deps_overrides.py  exception_handlers.py  initial_data.py  logger.py  main.py  middlewares.py  pre_start.py
server/connections/: aws.py  db.py  mongo.py
server/exceptions/: database_exceptions.py
server/middlewares/: admin_middleware.py  auth_middleware.py
server/mocks/: dependency_overrides.py
server/models/: building.py  classroom.py  holiday.py  institutional_event.py  occurence.py  page_models.py  reservation.py  schedule.py  subject.py  university_class.py  user.py  user_building.py
server/queries/: create_subject.py  example_test.py
server/repositories/: __init__.py  allocation_log_repository.py  bug_report_evidence_repository.py  bug_report_repository.py  building_repository.py  buildings_repository.py  calendar_repository.py  class_repository.py  classroom_permission_repository.py  classroom_repository.py  classroom_solicitation_repository.py  classrooms_repository.py  course_repository.py  curriculum_repository.py  curriculum_subject_repository.py  department_repository.py  event_repository.py  exam_repository.py  feedback_repository.py  forum_repository.py  group_repository.py  holiday_category_repository.py  holiday_repository.py  holidays_categories_repository.py  holidays_repository.py  institutional_event_repository.py  intentional_conflict_repository.py  meeting_repository.py  (+11 more)
src/: README.md  app.py
tests/: conftest.py  test_crawler_generate.py  test_initial.py
(+540 files in other folders)
