[project]
name="USPolis-Refactor"
version="0.1.0"
description = "Refactoring of USPolis backend repository"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Henrique Duran", email="henriquefduran@usp.br"}
]
dependencies = [
    "bcrypt~=4.0",
    "beanie~=1.23",
    "fastapi~=0.104",
    "fastapi-jwt>=0.2",
    "fastapi-mail~=1.4",
    "python-decouple~=3.8",
    "uvicorn~=0.24",
    "boto3",
    "requests",
    "beautifulsoup4"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "types-requests",
    "types-beautifulsoup4"
]
test = [
    "asgi-lifespan~=2.1",
    "httpx~=0.25",
    "pytest-asyncio~=0.21",
]

[project.urls]
"Source" = "https://github.com/flyinactor91/fastapi-beanie-jwt"

[tool.mypy]
exclude = ['build']
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
explicit_package_bases = true
ignore_missing_imports = false
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true

[tool.pyright]
include = ["server", "tests"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "**/build"
]
ignore = ["server/oldstuff"]

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.ruff]
lint.extend-select = [
    "UP"
]
lint.ignore = [
]
line-length = 88
indent-width = 4

[tool.setuptools]
packages = ["server", "tests"]